<resources>
    <string name="app_name">Digital Campus</string>
    <string name="autentication">Autenticación</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="remember_me">Recuérdame la próxima vez</string>
    <string name="enter_button">Entrar</string>
    <string name="exit">Salir</string>
    <string name="badEmailFormat">El formato del email no es correcto.</string>
    <string name="shortPassword">La contraseña debe contener 6 carácteres.</string>
    <string name="unregisteredEmail">El email introducido no esta registrado.</string>
    <string name="incorrectPassword">La contraseña introducida es incorrecta.</string>
    <string name="manageSubjects">Gestionar
Asignaturas</string>
    <string name="manageStudents">Gestionar
Alumnado</string>
    <string name="exams">Exámenes</string>
    <string name="logout">Salir</string>
    <string name="create_student">Crear Alumno</string>
    <string name="create_subject">Crear Asignatura</string>
    <string name="new_exam">Nuevo Examen</string>
    <string name="subjectmanager_text">Selecciona una asignatura</string>
    <string name="subjectmanager_actionbar">Gestión asignaturas</string>
    <string name="studentmanager_actionbar">Gestión alumnos</string>
    <string name="exammanager_actionbar">Listado examenes</string>
    <string name="title_elimination">Confirmación de Eliminación</string>
    <string name="text_elimination">Quieres eliminar la asignatura? </string>
    <string name="text2_elimination">Quieres eliminar al alumno? </string>
    <string name="title">Título</string>
    <string name="description">Descripción</string>
    <string name="createsubject_continue">Continuar ></string>
    <string name="createsubject_back">Anterior</string>
    <string name="createsubject_text">Introduce el temario:</string>
    <string name="subject_hint">Nombre tema…</string>
    <string name="insert">Insertar</string>
    <string name="info">INFORMACIÓN BÁSICA</string>
    <string name="themes">TEMARIO</string>
    <string name="students">ALUMNOS INSCRITOS</string>
    <string name="name">Nombre alumno</string>
    <string name="birth">Fecha de Nacimiento</string>
    <string name="degree">Carrera</string>
    <string name="gender">Sexo</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="photo">Foto</string>
    <string name="select_photo">Seleccionar Foto</string>
    <string name="create">Crear ></string>
    <string name="subjects">ASIGNATURAS</string>
    <string name="date">Fecha del examen</string>
    <string name="time">Hora del examen</string>
    <string name="subject">Asignatura</string>
    <string name="location">Aula</string>
    <string name="save">Guardar</string>
    <string name="PickaDate">Escoge una Fecha…</string>
    <string name="PickaTime">Escoge una Hora…</string>
    <string name="badDateTime">La fecha y/o la hora no son correctas.</string>
    <string name="select_students">Selecciona los alumnos inscritos</string>
    <string name="permissionDenied">No tienes permisos para acceder a la galería.</string>
    <string name="noImageSelected">Ninguna imagen seleccionada.</string>
    <string name="error">Ha habido un error.</string>
    <string name="CreateSubject1">Nueva asignatura 1/3</string>
    <string name="CreateSubject2">Nueva asignatura 2/3</string>
    <string name="CreateSubject3">Nueva asignatura 3/3</string>
    <string name="CreateSubject4">Nueva asignatura</string>
    <string name="CreateStudent">Nuevo alumno</string>
    <string name="ShowStudent">Ver alumno</string>
    <string name="CreateExam">Nuevo examen</string>
    <string name="EditExam">Editar examen</string>
</resources>
