<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/createstudent_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birth"
            android:textSize="25sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/createstudent_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PickaDate"
            android:textSize="20sp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree"
            android:textSize="25sp"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/createstudent_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="25sp"
            android:layout_marginTop="20dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/createstudent_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="25sp"/>

            <RadioButton
                android:id="@+id/createstudent_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="25sp"
                android:layout_marginTop="10dp"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            android:textSize="25sp"
            android:layout_marginTop="20dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/createstudent_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/app_icon"/>

            <Button
                android:id="@+id/createstudent_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_photo"
                android:layout_toRightOf="@id/createstudent_image"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <Button
            android:id="@+id/createstudent_create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_gravity="end|bottom"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</ScrollView>