<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:weightSum="10">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/createsubject_text"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"/>

    <ListView
        android:id="@+id/createsubject3_list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="7">

    </ListView>

    <EditText
        android:id="@+id/createsubject3_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject_hint"/>
    <Button
        android:id="@+id/createsubject3_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert"
        android:layout_gravity="end"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/createsubject3_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createsubject_back"
            android:layout_alignParentBottom="true"/>

        <Button
            android:id="@+id/createsubject3_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="@string/createsubject_continue"/>

    </RelativeLayout>



</LinearLayout>