<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:weightSum="10">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/select_students"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"/>

    <ListView
        android:id="@+id/createsubject2_list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="8">

    </ListView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/createsubject2_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createsubject_back"/>

        <Button
            android:id="@+id/createsubject2_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/createsubject_continue"/>

    </RelativeLayout>

</LinearLayout>