<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <TextView
            android:id="@+id/createsubject1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/createsubject1_titlefield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/createsubject1_title"
            android:layout_marginTop="20dp"/>

    </RelativeLayout>



    <TextView
        android:id="@+id/createsubject1_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <EditText
            android:id="@+id/createsubject1_descriptionfield"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/createsubject1_nextbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createsubject_continue"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"/>

    </RelativeLayout>

</LinearLayout>